Grandes alteracoes na secao de configuracoes do sistema

--- a/src/CadpazBundle/Resources/views/Questionario/new.html.twig
+++ b/src/CadpazBundle/Resources/views/Questionario/new.html.twig
@@ -245,11 +245,11 @@
     {{ form_label(form.encaminhamentoAoProjeto) }}
     {{ form_errors(form.encaminhamentoAoProjeto) }}
     {{ form_widget(form.encaminhamentoAoProjeto) }}
-    <hr>
+    {#<hr>
     <strong>Como ficou sabendo do projeto</strong><br>
     {{ form_label(form.comoFicouSabendoDoProjeto) }}
     {{ form_errors(form.comoFicouSabendoDoProjeto) }}
-    {{ form_widget(form.comoFicouSabendoDoProjeto) }}
+    {{ form_widget(form.comoFicouSabendoDoProjeto) }}#}
 </div>
 <!--<div class="spacer"></div>-->
 
