--- a/src/CadpazBundle/Resources/views/Relatorios/idades.html.twig
+++ b/src/CadpazBundle/Resources/views/Relatorios/idades.html.twig
@@ -6,7 +6,7 @@
 
 
 
-<div style="text-align: center; background: #DEF"><h3>Idade</h3></div>
+<div style="text-align: center;"><h3>Idade</h3></div>
 <div class="spacer"></div>
 <div style="clear: both"></div>
     
