--- a/src/CadpazBundle/Resources/views/Relatorios/index.html.twig
+++ b/src/CadpazBundle/Resources/views/Relatorios/index.html.twig
@@ -5,7 +5,7 @@
 
 
 <div id="relatoriosArea" class="example" style="width: 97%">
-    <div style="background: #FFF">
+    <div style="background: #FFF; text-align: center">
     <span style="font-weight: bold; font-size: x-large;">Relatório de uso</span>
     <hr>
     <p>Relatório dos atendimentos feitos no sistema.</p>
