--- a/src/CadpazBundle/Resources/views/Pessoa/index.html.twig
+++ b/src/CadpazBundle/Resources/views/Pessoa/index.html.twig
@@ -18,7 +18,7 @@
 {% block body %}
 
 
-<div id="container">
+<div id="container" style="min-height: 500px">
     <div id="titleArea">
         <div id="title">Cadpaz</div>
     </div>
@@ -67,7 +67,18 @@
     
     <div id="userDetails" class="example"></div>
     
+    <div class="spacer"></div>
+    
+    <div id="rodape" class="example" style="vertical-align: bottom; width: 825px;">
+                <div style="background: #FFF; text-align: right; font-size: small">
+                    Desenvolvimento: Carlos Alberto Borges Garcia Jr - dedraks@gmail.com
+                </div>
+            </div>
 </div>
+
+            
+            
+            
         <div class="modal"><!-- Place at bottom of page --><h3>Carregando...</h3></div>
 {% endblock %}
 {% block javascripts %}
