--- a/src/CadpazBundle/Resources/views/Relatorios/index.html.twig
+++ b/src/CadpazBundle/Resources/views/Relatorios/index.html.twig
@@ -4,7 +4,7 @@
 <id id="relatoriosInicio"></div>
 
 
-<div id="relatoriosArea" class="example" style="width: 97%">
+<div id="relatoriosArea" class="example" style="width: 825px">
     <div style="background: #FFF; text-align: center">
     <span style="font-weight: bold; font-size: x-large;">Relatório de uso</span>
     <hr>
@@ -37,11 +37,16 @@
 </div>
 </div>
 
-<div id="outro" class="relButtons">
+<div class="spacer"></div>
+
+
+<div id="outro" class="example" style="width: 825px">
+    <div style="background: #FFF">
     {% image '@CadpazBundle/Resources/public/images/print-icon2.png' %}
         <a title="Imprimir relatório" href="#" class="printRel"><img src="{{ asset_url }}" alt="Remover" /></a></td>
     {% endimage %}
 <a href="#" class="scrollToTop">Início da página</a>
+    </div>
 </div>
 
 <script>
