--- a/src/Dedraks/ConfigBundle/Resources/views/Origem/list.html.twig
+++ b/src/Dedraks/ConfigBundle/Resources/views/Origem/list.html.twig
@@ -121,7 +121,7 @@
         e.preventDefault();
         
         $.ajax({
-            //url: Routing.generate('configuracoes_caso_tipo_new'),
+            url: Routing.generate('configuracoes_origem_new'),
             success: function(responseText) {
                 
                 
