--- a/src/CadpazBundle/Resources/views/User/edit.html.twig
+++ b/src/CadpazBundle/Resources/views/User/edit.html.twig
@@ -15,3 +15,11 @@
     <li>{{ form(delete_form) }}</li>
 </ul>
 #}
+<script>
+$('#userForm').ajaxForm({
+    success: function(responseText) {
+        $("#dataArea").html(responseText);
+        window.configPopup.close();
+    }
+});
+</script>
