--- a/src/CadpazBundle/Resources/views/User/new.html.twig
+++ b/src/CadpazBundle/Resources/views/User/new.html.twig
@@ -1,10 +1,10 @@
-{% extends '::base.html.twig' %}
-
-{% block body -%}
-    <h1>User creation</h1>
+<div style="text-align: center">
+<span style="font-weight: bold; font-size: large;">Cadastrar usuário</span><br>
+</div>
+<br>
 
     {{ form(form) }}
-
+{#
         <ul class="record_actions">
     <li>
         <a href="{{ path('config_user') }}">
@@ -12,4 +12,13 @@
         </a>
     </li>
 </ul>
-{% endblock %}
+
+#}
+<script>
+$('#userForm').ajaxForm({
+    success: function(responseText) {
+        $("#dataArea").html(responseText);
+        window.configPopup.close();
+    }
+});
+</script>
