Detecção de javascript desabilitado

--- a/src/CadpazBundle/Resources/views/Pessoa/index.html.twig
+++ b/src/CadpazBundle/Resources/views/Pessoa/index.html.twig
@@ -17,6 +17,15 @@
 
 {% block body %}
 
+<noscript>
+    <style>
+        #container {
+            display: none;
+        }
+    </style>
+    <h2>É necessário javascript habilitado para o correto funcionamento do sistema.</h2>
+</noscript>
+    
 
 <div id="container" style="min-height: 500px">
     <div id="titleArea" style="width: 825px;">
@@ -68,6 +77,11 @@
     <div id="userDetails" class="example" style="width: 825px;"></div>
     
     <div class="spacer"></div>
+    
+    
+    
+
+    
     
     <div id="rodape" class="example" style="vertical-align: bottom; width: 825px;">
                 <div style="background: #FFF; text-align: right; font-size: small">
